@@ -43,6 +43,7 @@ Bug fixes for the 1.4 release.
 * Fix entity:bring_to_front()/back() ignoring the order of obstacles.
 * Fix hero stuck on blocks.
 * Fix custom_entity:set_can_traverse_ground() giving opposite result (#668).
+* Fix enemy:immobilize() having no effect when already immobilized.
 
 _______________________________
 
